--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "openai": "^3.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-icons": "^4.10.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
